Added EntityModel to Solution

--- a/CodeTechnologiesMVC/CodeTechnologiesMVC.csproj
+++ b/CodeTechnologiesMVC/CodeTechnologiesMVC.csproj
@@ -56,6 +56,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -188,19 +190,61 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="academy.cs">
+      <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="App_Start\AuthConfig.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="candidate.cs">
+      <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="client.cs">
+      <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CodeTechnologiesModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CodeTechnologiesModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CodeTechnologiesModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CodeTechnologiesModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CodeTechnologiesModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="confighiredprometric.cs">
+      <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="exam.cs">
+      <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="institute.cs">
+      <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="mail.cs">
+      <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="prometric.cs">
+      <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="voucher.cs">
+      <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
@@ -259,6 +303,23 @@
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <EntityDeploy Include="CodeTechnologiesModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>CodeTechnologiesModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="CodeTechnologiesModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>CodeTechnologiesModel.edmx</DependentUpon>
+      <LastGenOutput>CodeTechnologiesModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="CodeTechnologiesModel.edmx.diagram">
+      <DependentUpon>CodeTechnologiesModel.edmx</DependentUpon>
+    </Content>
+    <Content Include="CodeTechnologiesModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>CodeTechnologiesModel.edmx</DependentUpon>
+      <LastGenOutput>CodeTechnologiesModel.cs</LastGenOutput>
+    </Content>
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
@@ -319,6 +380,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
