--- a/CodeTechnologiesMVC/CodeTechnologiesMVC.csproj
+++ b/CodeTechnologiesMVC/CodeTechnologiesMVC.csproj
@@ -224,6 +224,7 @@
     </Compile>
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MailController.cs" />
     <Compile Include="exam.cs">
       <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
     </Compile>
@@ -238,6 +239,7 @@
       <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\MailViewModel.cs" />
     <Compile Include="prometric.cs">
       <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
     </Compile>
@@ -374,6 +376,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
+    <Content Include="Views\Mail\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
