--- a/CodeTechnologiesMVC/CodeTechnologiesMVC.csproj
+++ b/CodeTechnologiesMVC/CodeTechnologiesMVC.csproj
@@ -42,15 +42,15 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="MySql.Data, Version=6.7.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\MySQL\Connector NET 6.7.4\Assemblies\v4.0\MySql.Data.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\MySQL\MySQL Connector Net 6.7.4\Assemblies\v4.0\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data.Entity, Version=6.7.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\MySQL\Connector NET 6.7.4\Assemblies\v4.0\MySql.Data.Entity.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\MySQL\MySQL Connector Net 6.7.4\Assemblies\v4.0\MySql.Data.Entity.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Web, Version=6.7.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\MySQL\Connector NET 6.7.4\Assemblies\v4.0\MySql.Web.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\MySQL\MySQL Connector Net 6.7.4\Assemblies\v4.0\MySql.Web.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -191,7 +191,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="academy.cs">
-      <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="account.cs">
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
     </Compile>
     <Compile Include="App_Start\AuthConfig.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -199,53 +202,77 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="candidate.cs">
-      <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
     </Compile>
     <Compile Include="client.cs">
-      <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="CodeTechnologiesModel.Context.cs">
+    <Compile Include="code.cs">
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CodeTechModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>CodeTechnologiesModel.Context.tt</DependentUpon>
+      <DependentUpon>CodeTechModel.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="CodeTechnologiesModel.cs">
+    <Compile Include="CodeTechModel.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="CodeTechnologiesModel.Designer.cs">
+    <Compile Include="CodeTechModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>CodeTechnologiesModel.edmx</DependentUpon>
+      <DependentUpon>CodeTechModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="confighiredprometric.cs">
-      <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MailController.cs" />
     <Compile Include="exam.cs">
-      <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="examnature.cs">
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="examstraining.cs">
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="expens.cs">
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="institute.cs">
-      <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
     </Compile>
     <Compile Include="mail.cs">
-      <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\MailViewModel.cs" />
+    <Compile Include="pricing.cs">
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="prometric.cs">
-      <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="prometricpromotion.cs">
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="trainingaccount.cs">
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="vendor.cs">
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="voucher.cs">
-      <DependentUpon>CodeTechnologiesModel.tt</DependentUpon>
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -305,22 +332,22 @@
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
-    <EntityDeploy Include="CodeTechnologiesModel.edmx">
+    <EntityDeploy Include="CodeTechModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>CodeTechnologiesModel.Designer.cs</LastGenOutput>
+      <LastGenOutput>CodeTechModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <Content Include="CodeTechnologiesModel.Context.tt">
+    <Content Include="CodeTechModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>CodeTechnologiesModel.edmx</DependentUpon>
-      <LastGenOutput>CodeTechnologiesModel.Context.cs</LastGenOutput>
+      <DependentUpon>CodeTechModel.edmx</DependentUpon>
+      <LastGenOutput>CodeTechModel.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="CodeTechnologiesModel.edmx.diagram">
-      <DependentUpon>CodeTechnologiesModel.edmx</DependentUpon>
+    <Content Include="CodeTechModel.edmx.diagram">
+      <DependentUpon>CodeTechModel.edmx</DependentUpon>
     </Content>
-    <Content Include="CodeTechnologiesModel.tt">
+    <Content Include="CodeTechModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>CodeTechnologiesModel.edmx</DependentUpon>
-      <LastGenOutput>CodeTechnologiesModel.cs</LastGenOutput>
+      <DependentUpon>CodeTechModel.edmx</DependentUpon>
+      <LastGenOutput>CodeTechModel.cs</LastGenOutput>
     </Content>
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
@@ -375,7 +402,9 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Web.config" />
+    <Content Include="Views\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\Mail\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
