Added Exam CRUD operations with screens, but Create is not working, issue with DropDownlist

--- a/CodeTechnologiesMVC/CodeTechnologiesMVC.csproj
+++ b/CodeTechnologiesMVC/CodeTechnologiesMVC.csproj
@@ -232,6 +232,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ClientController.cs" />
     <Compile Include="Controllers\CodeController.cs" />
+    <Compile Include="Controllers\ExamsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InstituteController.cs" />
     <Compile Include="Controllers\MailController.cs" />
@@ -430,6 +431,11 @@
     <Content Include="Views\Code\Details.cshtml" />
     <Content Include="Views\Code\Edit.cshtml" />
     <Content Include="Views\Code\Delete.cshtml" />
+    <Content Include="Views\Exams\Index.cshtml" />
+    <Content Include="Views\Exams\Create.cshtml" />
+    <Content Include="Views\Exams\Details.cshtml" />
+    <Content Include="Views\Exams\Edit.cshtml" />
+    <Content Include="Views\Exams\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
