--- a/CodeTechnologiesMVC/CodeTechnologiesMVC.csproj
+++ b/CodeTechnologiesMVC/CodeTechnologiesMVC.csproj
@@ -238,6 +238,7 @@
     <Compile Include="Controllers\InstituteController.cs" />
     <Compile Include="Controllers\MailController.cs" />
     <Compile Include="Controllers\PrometricController.cs" />
+    <Compile Include="Controllers\PromotionsController.cs" />
     <Compile Include="exam.cs">
       <DependentUpon>CodeTechModel.tt</DependentUpon>
     </Compile>
@@ -443,11 +444,17 @@
     <Content Include="Views\Expenses\Details.cshtml" />
     <Content Include="Views\Expenses\Edit.cshtml" />
     <Content Include="Views\Expenses\Delete.cshtml" />
-    <Content Include="Views\Prometric\Index.cshtml" />
     <Content Include="Views\Prometric\Create.cshtml" />
     <Content Include="Views\Prometric\Details.cshtml" />
     <Content Include="Views\Prometric\Edit.cshtml" />
     <Content Include="Views\Prometric\Delete.cshtml" />
+    <Content Include="Views\Prometric\Index.cshtml" />
+    <Content Include="Views\Promotions\Index.cshtml" />
+    <Content Include="Views\Promotions\IndexWithId.cshtml" />
+    <Content Include="Views\Promotions\Create.cshtml" />
+    <Content Include="Views\Promotions\Details.cshtml" />
+    <Content Include="Views\Promotions\Edit.cshtml" />
+    <Content Include="Views\Promotions\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
