Added Complete Prometric and Promotions Modules

--- a/CodeTechnologiesMVC/CodeTechnologiesMVC.csproj
+++ b/CodeTechnologiesMVC/CodeTechnologiesMVC.csproj
@@ -455,6 +455,7 @@
     <Content Include="Views\Promotions\Details.cshtml" />
     <Content Include="Views\Promotions\Edit.cshtml" />
     <Content Include="Views\Promotions\Delete.cshtml" />
+    <Content Include="Views\Promotions\CustomerPrometricError.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
