--- a/CodeTechnologiesMVC/CodeTechnologiesMVC.csproj
+++ b/CodeTechnologiesMVC/CodeTechnologiesMVC.csproj
@@ -468,9 +468,11 @@
     <Content Include="Views\Promotions\Delete.cshtml" />
     <Content Include="Views\Promotions\CustomerPrometricError.cshtml" />
     <Content Include="Views\Mail\Index.cshtml" />
+    <Content Include="Views\Mail\ImportMailExcelFileToDB.cshtml" />
+    <Content Include="Views\Mail\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="App_Data\ExcelFiles\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
