--- a/CodeTechnologiesMVC/CodeTechnologiesMVC.csproj
+++ b/CodeTechnologiesMVC/CodeTechnologiesMVC.csproj
@@ -207,9 +207,6 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="candidate.cs">
-      <DependentUpon>CodeTechModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="client.cs">
       <DependentUpon>CodeTechModel.tt</DependentUpon>
     </Compile>
@@ -257,6 +254,9 @@
     <Compile Include="examstraining.cs">
       <DependentUpon>CodeTechModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="examtype.cs">
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="expens.cs">
       <DependentUpon>CodeTechModel.tt</DependentUpon>
     </Compile>
@@ -274,16 +274,31 @@
     <Compile Include="Models\mail.cs" />
     <Compile Include="Models\MailAttribs.cs" />
     <Compile Include="Models\MailViewModel.cs" />
+    <Compile Include="pearsoncandidate.cs">
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="pricing.cs">
       <DependentUpon>CodeTechModel.tt</DependentUpon>
     </Compile>
     <Compile Include="prometric.cs">
       <DependentUpon>CodeTechModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="prometriccandidate.cs">
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="prometricpromotion.cs">
       <DependentUpon>CodeTechModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="purchasingpricing.cs">
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="techcentreadmin.cs">
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="trainer.cs">
+      <DependentUpon>CodeTechModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="trainingaccount.cs">
       <DependentUpon>CodeTechModel.tt</DependentUpon>
     </Compile>
@@ -359,14 +374,13 @@
     <Content Include="CodeTechModel.edmx.diagram">
       <DependentUpon>CodeTechModel.edmx</DependentUpon>
     </Content>
-    <Content Include="CodeTechModel.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>CodeTechModel.Context.cs</LastGenOutput>
-      <DependentUpon>CodeTechModel.edmx</DependentUpon>
-    </Content>
     <Content Include="CodeTechModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>CodeTechModel.cs</LastGenOutput>
+    </Content>
+    <Content Include="CodeTechModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>CodeTechModel.Context.cs</LastGenOutput>
       <DependentUpon>CodeTechModel.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
